fix(components/effects/GlowingBackground): reduce intensity on mobile devices

--- a/src/components/effects/GlowingBackground.module.scss
+++ b/src/components/effects/GlowingBackground.module.scss
@@ -24,7 +24,7 @@
   transition: opacity 5s, top 1.5s var(--easing);
 
   @media (max-width: queries.$mw-mobile) {
-    opacity: 0.6;
+    opacity: 0.5;
   }
 
   & > * {
